--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,14 @@
 # Network Configuration
 NETWORK_MODE=mainnet
+# NETWORK_MODE=testnet
 
 # Mainnet
 MAINNET_RPC_URL=https://your-monad-mainnet-rpc.com
-MAINNET_CHAIN_ID=10200
+MAINNET_CHAIN_ID=143
+
+# Testnet
+TESTNET_RPC_URL=https://your-monad-testnet-rpc.com
+TESTNET_CHAIN_ID=10143
 
 # Wallet Configuration
 MNEMONIC=your twelve word mnemonic phrase here for wallet derivation
@@ -36,6 +41,7 @@ TOKEN_LIST_API_BASE_URL=https://api.nad.fun
 
 # Metadata upload (use network-specific API)
 MAINNET_METADATA_API_BASE_URL=https://api.nad.fun
+TESTNET_METADATA_API_BASE_URL=https://dev-api.nad.fun
 
 # Metadata fetch settings
 METADATA_START_PAGE=1
